updated JS and html file

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
             <button type="submit" class="btn btn-primary" style="width: 100%">Search</button>
           </form>
+          <!-- <div id="button-container"></div> -->
           <hr />
           <div>
             <button class="btn btn-secondary recent-button" style="width: 100%"></button>
