updated recent-button div in html

--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
             </div>
             <button type="submit" class="btn btn-primary" style="width: 100%">Search</button>
           </form>
-          <!-- <div id="button-container"></div> -->
           <hr />
-          <div>
-            <button class="btn btn-secondary recent-button" style="width: 100%"></button>
-          </div>
+          <div id="recent-button"></div>
         </aside>
         <section id="current-forecast" class="container-fluid col-lg-9"></section>
         <div>
