worked on localStorage

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             </div>
             <button type="submit" class="btn btn-primary" style="width: 100%">Search</button>
           </form>
-          <hr />
           <div id="recent-button"></div>
+          <hr />
+          <!-- <div>
+            <button class="btn btn-secondary recent-button" style="width: 100%"></button>
+          </div> -->
         </aside>
         <section id="current-forecast" class="container-fluid col-lg-9"></section>
         <div>
