working on local storage to display multiple search results

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <button type="submit" class="btn btn-primary" style="width: 100%">Search</button>
           </form>
           <hr />
-          <div id="recent-button"></div>
-          <!-- <div>
-            <button class="btn btn-secondary recent-button" style="width: 100%"></button>
-          </div> -->
+          <!-- <div id="recent-button"></div> -->
+          <div>
+            <button id="recent-button" class="btn btn-secondary" style="width: 100%"></button>
+          </div>
         </aside>
         <section id="current-forecast" class="container-fluid col-lg-9"></section>
         <div>
