worked on local storage

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           </form>
           <hr />
           <!-- <div id="recent-button"></div> -->
-          <div>
-            <button id="recent-button" class="btn btn-secondary" style="width: 100%"></button>
+          <div class="past-search-buttons">
+            <!-- <button id="recent-button" class="btn btn-secondary" style="width: 100%"></button> -->
           </div>
         </aside>
         <section id="current-forecast" class="container-fluid col-lg-9"></section>
