finished local storage and recent button search

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
             <button type="submit" class="btn btn-primary" style="width: 100%">Search</button>
           </form>
           <hr />
-          <!-- <div id="recent-button"></div> -->
-          <div class="past-search-buttons">
-            <!-- <button id="recent-button" class="btn btn-secondary" style="width: 100%"></button> -->
-          </div>
+          <div class="past-search-buttons"></div>
         </aside>
         <section id="current-forecast" class="container-fluid col-lg-9"></section>
         <div>
