--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
           <h3 class="text-center">5 Day Forecast:</h3>
         </div>
-        <section class="container w-75 d-flex flex-wrap justify-content-center col-lg-9">
+        <section class="container w-75 d-flex flex-wrap justify-content-end col-lg-9">
           <div class="card">
             <div class="card-body">
               <p id="date1"></p>
